--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,15 @@ services:
     networks:
       - backend
 
+  user-service:
+    build: ./user-service
+    container_name: user-service
+    depends_on:
+      - mysql
+    ports:
+      - "8082:8082"
+    networks:
+      - backend
 
 networks:
   backend:
