--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>book-service</module>
         <module>user-service</module>
+        <module>borrow-service</module>
     </modules>
 
     <properties>
